# kameleon

./: .gitignore  .gitmodules  Makefile
cmake/: ide.el  kameleon-core.cmake
esp32/: build_cscope.sh  ide.el  sdkconfig
esp32/main/: CMakeLists.txt  esp32_main.c  ieee80211dev.c  pwm_module.c
esp32/main/targets/boards/esp32-devkitc/src/: uart.c
esp32/main/targets/boards/esp32-wrover-b/: board.js  target.cmake
esp32/main/targets/boards/esp32-wrover-b/js/: http_test.js
esp32/main/targets/boards/esp32-wrover-b/src/: adc.c  flash.c  i2c.c  nvs.c  pwm.c  spi.c  storage.c  storage_test.js  system.c  tty.c
esp8266/: ide.el  sdkconfig
esp8266/components/jerryscript/: build.sh  toolchain_mcu_esp8266.cmake
esp8266/main/: CMakeLists.txt  esp8266_main.c
include/: io.h
include/port/: i2c.h  spi.h
src/: global.c  io.c  main.c  runtime.c
src/duktape/: duk_config.h  duk_source_meta.json  duktape.c  duktape.h
src/modules/net/: module_net.c
targets/boards/esp32-wrover-b/: target.cmake
targets/boards/esp32-wrover-b/src/: adc.c  flash.c  gpio.c  i2c.c  pwm.c  system.c
targets/boards/kameleon-core/: CMakeLists.txt  target.cmake
